--- a/media.css
+++ b/media.css
@@ -1,3 +1,4 @@
+
 @media screen and (max-width:768px) and (min-width:550px) {
     nav{
         flex-direction: column;
@@ -10,6 +11,7 @@
       body.expand .mainText {
         padding: 50px 0;
         margin-bottom: 20px;
+        border:none;
       }
       
       body.expand .mainText h1 {
@@ -37,17 +39,17 @@
         font-size:18px;
         padding-bottom: 20px;
     }
-    body.expand {
+    body .expand {
         padding:10px;
       }
       
-    body.expand .mainText {
+    body .expand .mainText {
         border:none;
         padding: 30px 0;
         margin-bottom: 20px;
       }
       
-    body.expand .mainText h1 {
+    body .expand .mainText h1 {
         margin-bottom: 30px;
         font-size: 25px;
       }
