--- a/style.css
+++ b/style.css
@@ -6,18 +6,10 @@ body {
 }
 
 body a.arrowDown {
-  font-size: 30px;
+  display: inline-block;
   text-decoration: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   margin: 0 auto;
   border-radius: 50%;
-  width: 45px;
-  height: 45px;
 }
 
 body a.arrowDown:hover {
@@ -26,6 +18,7 @@ body a.arrowDown:hover {
 }
 
 body a.btn {
+  display: inline-block;
   color: #fc635e;
   text-decoration: none;
   font-size: 22px;
@@ -167,15 +160,23 @@ body .recive p {
 }
 
 .expand {
-  padding: 100px 100px 15px 100px;
+  padding: 80px 80px 30px 80px;
   background: url("img/expand.png") no-repeat;
-  /*min-height: 575px;*/
+  min-height: 400px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 1260px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .expand .mainText {
-  padding: 50px;
+  padding: 40px;
   margin-bottom: 80px;
-  border: 15px solid rgba(0, 0, 0, 0.5);
+  border: 15px solid rgba(0, 0, 0, 0.2);
 }
 
 .expand .mainText h1 {
@@ -372,6 +373,8 @@ body .recive p {
 }
 
 .our_team {
+  max-width: 1260px;
+  min-height: 500px;
   background-color: #f2f2f2;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -381,7 +384,6 @@ body .recive p {
       -ms-flex-direction: column;
           flex-direction: column;
   text-align: center;
-  margin-bottom: 10px;
   padding: 30px;
 }
 
@@ -424,6 +426,7 @@ body .recive p {
   text-transform: uppercase;
   color: gray;
   text-decoration: underline;
+  padding-top: 50px;
   padding-bottom: 5px;
 }
 
