--- a/style.scss
+++ b/style.scss
@@ -1,20 +1,17 @@
 
 body{
     a.arrowDown{
-        font-size: 30px;
+        display: inline-block;
         text-decoration: none;
-        display: flex;
-        justify-content: center;
         margin: 0 auto;
         border-radius: 50%;
-        width: 45px;
-        height: 45px;
         &:hover{
             background: #fc635e;
             color:#ffffff;
         }
     }
     a.btn{
+        display: inline-block;
         color:#fc635e;
         text-decoration: none;
         font-size: 22px;
@@ -125,11 +122,14 @@ body{
             }
         }
         .expand{
-                padding: 100px 100px 15px 100px;
+                padding: 80px 80px 30px 80px;
                 background: url('img/expand.png') no-repeat;
-                /*min-height: 575px;*/
+                min-height: 400px;
+                display: flex;
+                max-width: 1260px;
+                flex-direction: column;
                 .mainText{
-                    padding: 50px;
+                    padding: 40px;
                     margin-bottom: 80px;
                     border:15px solid rgba(0,0,0,0.2);
                     h1{
@@ -274,11 +274,12 @@ body{
         }
     }
     .our_team{
+        max-width: 1260px;
+        min-height: 500px;
         background-color: #f2f2f2;
         display: flex;
         flex-direction: column;
         text-align: center;
-        margin-bottom: 10px;
         padding:30px;
         .wrap{
             display: flex;
@@ -309,6 +310,7 @@ body{
             text-transform: uppercase;
             color:gray;
             text-decoration: underline;
+            padding-top: 50px;
             padding-bottom: 5px;
             span{
                 color:#fc635e;
